Add Restart Modem module

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-
 .DS_Store
+/.Trash
+/.vscode
 CheaperPriceCalculatorProperties.js
+RestartModemProperties.js
 Resources/Compras.csv
 Resources/Productos.csv
