Add Linksys router restart

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ CheaperPriceCalculatorProperties.js
 RestartModemProperties.js
 Resources/Compras.csv
 Resources/Productos.csv
+RestartLinksysRouterProperties.js
